# ajazz-akp03e

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: basic_events.py  button_actions.py
src/ajazz_akp03e/: __init__.py  _constants.py  _device.py  _events.py  _image.py  _protocol.py  _transport.py  errors.py
tests/: conftest.py  test_device.py  test_events.py  test_image.py  test_protocol.py  test_transport.py
